# opentelemetry-python-sample-app

./: README.md
fastapi-on-cloud-run/: .dockerignore  Dockerfile  README.md  custom_loggers.py  logging_config.yaml  main.py  poetry.toml  pyproject.toml  trace.py  tracing.py
fastapi-on-cloud-run/domain/: strategy.py
flask-on-cloud-functions/: README.md  custom_loggers.py  logging_config.yaml  main.py  requirements.txt  tracing.py
